--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,7 @@ div.touch-node-info {
   width: 100%;
   border-bottom: 5px solid;
 
+  /* background-color: #d1dae8; */
   /* background-color: grey;
   margin-top: 1%;
   margin-bottom: 1%; */
@@ -52,16 +53,19 @@ p.id {
   left: 0;
 }
 
-input.touch-node-info {
-  width: 90%;
-  margin: auto;
-}
-
-img.touch-node-info {
+p.close {
+  color: grey;
+  font-size: 12.5px;
+  margin-right: 2%;
   position: absolute;
   top: 0;
   right: 0;
   cursor: pointer;
+}
+
+input.touch-node-info {
+  width: 90%;
+  margin: auto;
 }
 
 img.route {
