--- a/src/App.css
+++ b/src/App.css
@@ -21,36 +21,39 @@ div.route {
 }
 
 div.dashboard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 20%;
   padding: 0;
   overflow: auto;
   border-style: solid;
   margin-left: 0;
   margin-right: 5%;
-  display: block;
+  background-color: #e1e2e3;
 }
 
-div.touch-node-info {
+div.touch-node-card {
   position: relative;
-  height: 12%;
-  width: 100%;
-  border-bottom: 5px solid;
-
-  /* background-color: #d1dae8; */
-  /* background-color: grey;
-  margin-top: 1%;
-  margin-bottom: 1%; */
+  width: 80%;
+  margin: 2%;
+  padding: 5%;
+  border-radius: 10px;
+  z-index: 0;
+  cursor: move;
+  background-color: white;
 }
 
-p.touch-node-info {
+p.touch-node-card {
   margin: 0;
   font-weight: bold;
+  pointer-events: none;
 }
 
 p.id {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 2%;
+  left: 2%;
 }
 
 p.close {
@@ -58,12 +61,13 @@ p.close {
   font-size: 12.5px;
   margin-right: 2%;
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 2%;
+  right: 2%;
   cursor: pointer;
+  pointer-events: auto;
 }
 
-input.touch-node-info {
+input.touch-node-card {
   width: 90%;
   margin: auto;
 }
