--- a/src/App.css
+++ b/src/App.css
@@ -28,14 +28,17 @@ div.dashboard {
   padding: 0;
   overflow: auto;
   border-style: solid;
+  padding-top: .75%;
   margin-left: 0;
   margin-right: 5%;
   background-color: #e1e2e3;
 }
 
 div.touch-node-card {
+  box-sizing: border-box;
   position: relative;
-  width: 80%;
+  width: 90%;
+  /* height: 10%; */
   margin: 2%;
   padding: 5%;
   border-radius: 10px;
