--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,14 @@
 .App {
   text-align: center;
   justify-content: center;
+
 }
 
 div.route-container {
   position: absolute;
   width: 100%;
+  display: flex;
+  flex-direction: row;
 }
 
 div.route {
@@ -13,6 +16,61 @@ div.route {
   margin: auto;
   width: 60%;
   border-style: solid;
+}
+
+div.dashboard {
+  position: absolute;
+  left: 82.5%;
+  top: 10%;
+  width: 15%;
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0;
+  overflow: auto;
+  border-style: solid;
+  padding-top: .75%;
+  background-color: #e1e2e3;
+}
+
+div.touch-node-card {
+  box-sizing: border-box;
+  position: relative;
+  width: 90%;
+  margin: 2%;
+  padding: 5%;
+  border-radius: 10px;
+  z-index: 0;
+  cursor: move;
+  background-color: white;
+}
+
+p.touch-node-card {
+  margin: 2%;
+  font-weight: bold;
+  pointer-events: none;
+}
+
+p.position {
+  position: absolute;
+  top: 2%;
+  left: 2%;
+}
+
+p.close {
+  color: grey;
+  font-size: 12.5px;
+  position: absolute;
+  top: 2%;
+  right: 2%;
+  cursor: pointer;
+  pointer-events: auto;
+}
+
+textarea.touch-node-card {
+  width: 90%;
+  margin: auto;
 }
 
 img.route {
