--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,15 +3,20 @@
   justify-content: center;
 }
 
+.content {
+  height: 800px;
+}
+
 .route-container {
-  position: absolute;
-  width: 100%;
+  display: inline-block;
+  vertical-align: top;
+  width: 60%;
 }
 
 .route {
   position: relative;
   margin: auto;
-  width: 60%;
+  width: 100%;
   border-style: solid;
 }
 
@@ -20,19 +25,19 @@
   height: auto;
 }
 
-.dashboard {
-  position: absolute;
-  left: 82.5%;
-  top: 10%;
+.dashboard-container {
+  display: inline-block;
+  vertical-align: top;
   width: 15%;
-  height: 80%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 0;
+  height: 70%;
+  margin-left: 5%;
+}
+
+.dashboard {
+  width: auto;
+  height: 100%;
   overflow: auto;
   border-style: solid;
-  padding-top: .75%;
   background-color: #e1e2e3;
 }
 
@@ -40,7 +45,7 @@
   box-sizing: border-box;
   position: relative;
   width: 90%;
-  margin: 2%;
+  margin: 3% auto;
   padding: 5%;
   border-radius: 10px;
   z-index: 0;
