--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -21,12 +21,17 @@
   height: auto;
 }
 
-.dashboard {
+.dashboards {
   display: inline-block;
-  vertical-align: top;
-  width: 15%;
-  height: 70%;
-  margin-left: 5%;
+  margin: 2%;
+  width: 25%;
+  height: 100%;
+}
+
+.dashboard {
+  width: 100%;
+  height: 60%;
+  margin: auto;
   overflow: auto;
   border-style: solid;
   background-color: #e1e2e3;
@@ -120,11 +125,10 @@ div.tool-box {
 }
 
 .beta-dashboard {
-  display: inline-block;
-  vertical-align: top;
-  width: auto;
-  height: 70%;
-  margin: 1%;
+  width: 100%;
+  height: 40%;
+  margin: auto;
+  overflow: auto;
   border: solid black;
 }
 
