implemented register user functionality

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -150,5 +150,19 @@ div.tool-box {
 }
 
 .login {
-  background: grey;
+  border: solid black;
+}
+
+.login input {
+  display: block;
+  margin: 1% auto;
+}
+
+.register {
+  border: solid black;
+}
+
+.register input {
+  display: block;
+  margin: 1% auto;
 }
